# mcp-gaussdb-server

./: README.md
gaussdb-server/: .env.sample  README.md  gaussdb_mcp_server.py  init_pq.sh  install_python310.sh  pyproject.toml  requirements.txt  start_mcp_server.sh
